--- a/nick/app.css
+++ b/nick/app.css
@@ -127,44 +127,78 @@
   margin-right: 1rem;
 }
 
-.reviews .review .user-info .user .name {
+.reviews .review .user-info .user .top .name {
   font-size: 18px;
   font-weight: bold;
   color: var(--black);
+  margin-right: 0.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.reviews .review .user-info .user .eth-address {
+.reviews .review .user-info .user .top .eth-address {
   color: var(--steel);
-}
-
-.reviews .review .user-info .user {
-  display: flex;
-  justify-content: center;
+  font-size: 12px;
+  font-weight: 300;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-right: 0.5rem;
   -ms-flex: 1;
   -moz-flex: 1;
   -webkit-flex: 1;
   flex: 1;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  -webkit-flex-direction: column;
-  flex-direction: column;
+}
+
+.reviews .review .user-info .user .top {
+  min-width: 0;
+  display: flex;
+  align-items: baseline;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+  -ms-flex-direction: row;
+  -moz-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+
+.reviews .review .user-info .user .purchase {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-right: 0.5rem;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
+}
+
+.reviews .review .user-info .user {
+  min-width: 0;
+  -ms-flex: 1;
+  -moz-flex: 1;
+  -webkit-flex: 1;
+  flex: 1;
 }
 
 .reviews .review .user-info .info {
-  text-align: right;
-  color: var(--steel);
   display: flex;
+  min-width: 0;
   justify-content: space-around;
-  -ms-flex-direction: column;
-  -moz-flex-direction: column;
-  -webkit-flex-direction: column;
-  flex-direction: column;
+  color: var(--steel);
+  -ms-flex-direction: row;
+  -moz-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
 }
 
 .reviews .review .user-info {
   display: flex;
   width: 100%;
-  justify-content: space-around;
+  align-items: flex-start;
 }
 
 .reviews .review .text {
